@@ -355,10 +355,6 @@
 						<input type="checkbox" id="profile_steamgifts"><label for="profile_steamgifts"><img src="img/ico/steamgifts.png" class="site_icon site_icon_gray" /><img src="img/ico/steamgifts_col.png" class="site_icon site_icon_col" />SteamGifts</label>
 					</li>
 					<li>
-						<input type="checkbox" id="profile_steamtrades"><label for="profile_steamtrades"><img src="img/ico/steamtrades.png" class="site_icon site_icon_gray" /><img src="img/ico/steamtrades_col.png" class="site_icon site_icon_col" />SteamTrades</label>
-					</li>
-
-					<li>
 						<input type="checkbox" id="profile_astats"><label for="profile_astats"><img src="img/ico/achievementstats.png" class="site_icon site_icon_gray" /><img src="img/ico/achievementstats_col.png" class="site_icon site_icon_col" />Achievement Stats</label>
 					</li>
 					<li>
@@ -393,8 +389,6 @@
 				<li class="header" id="programming_text">Programming</li>
 				<li>Jason '<a href="http://steamcommunity.com/profiles/76561198040672342" id="jshackles_steam">jshackles</a>' Shackles</li>
 				<li>Ben '<a href="http://steamcommunity.com/profiles/76561198000198761" id="smashman_steam">Smashman</a>' Williams</li>
-				<li>Rob '<a href="http://steamcommunity.com/profiles/76561197989222171" id="rjackson_steam">rjacksonm1</a>' Jackson</li>
-				<li>Tomáš '<a href="http://steamcommunity.com/profiles/76561198020275445" id="tomas_steam">Timmy</a>' Duda</li>				
 			</ul>
 			<div class="header" id="translation_text">Translation</div>
 			<table class="translation">
