@@ -1,6 +1,7 @@
 v7.3
 -----
 + Added an option to hide games in search results you've marked as "Not Interested"
+- Removed redundant SteamTrades profile link
 
 
 v7.2.1
